<resources>
    <string name="app_name">MAD-105_Final_Project2</string>
    <string name="cust_name_text">Customer Name</string>
    <string name="cust_name_hint">Your Name</string>
    <string name="phone_text">Customer Phone</string>
    <string name="cust_phone_hint">Your Phone #</string>
    <string name="toScreen2">Next</string>

    <string name="scr2Name">Name:</string>
    <string name="scr2Phone">Phone:</string>

    <string name="teaBlack">Black Tea</string>
    <string name="teaGreen">Green Tea</string>
    <string name="teaHerbal">Herbal Tea</string>
    <string name="teaSugar">Sugar</string>
    <string name="teaSugarOff">No Sugar</string>
    <string name="teaCream">Cream</string>
    <string name="teaCreamOff">No Cream</string>
    <string name="sizeString">Size: </string>
    <string name="teaSize">Medium</string>
    <string name="toScreen3">Next</string>

    <string name="teaSelection">Tea Type:</string>
    <string name="teaSizeSelection">Tea Size:</string>
    <string name="notifyMsg">Please be patient, we will text when your tea is ready.</string>
</resources>