<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/idPrintName"
        android:layout_width="222dp"
        android:layout_height="34dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/idPrintPhone"
        android:layout_width="222dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPrintName" />

    <Button
        android:id="@+id/idButtonToScr3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/toScreen3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/idradioGroup"
        android:layout_width="168dp"
        android:layout_height="152dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.146"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idPrintPhone">

        <RadioButton
            android:id="@+id/idBtnBlackTea"
            android:layout_width="121dp"
            android:layout_height="wrap_content"
            android:text="@string/teaBlack" />

        <RadioButton
            android:id="@+id/idBtnGreenTea"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:text="@string/teaGreen" />

        <RadioButton
            android:id="@+id/idBtnHerbalTea"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:text="@string/teaHerbal" />
    </RadioGroup>

    <SeekBar
        android:id="@+id/idSeekBarSize"
        android:layout_width="326dp"
        android:layout_height="54dp"
        android:layout_marginTop="8dp"
        android:max="3"
        android:min="1"
        android:progress="2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idradioGroup" />

    <TextView
        android:id="@+id/idSeekBarText"
        android:layout_width="144dp"
        android:layout_height="37dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="76dp"
        android:text="@string/teaSize"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSeekBarSize" />

    <TextView
        android:layout_width="94dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:gravity="end"
        android:text="@string/sizeString"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/idSeekBarText"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idSeekBarSize" />

    <ToggleButton
        android:id="@+id/idToggleSugar"
        android:layout_width="105dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="24dp"
        android:text="@string/teaSugar"
        android:textOff="@string/teaSugarOff"
        android:textOn="@string/teaSugar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/idPrintPhone"
        tools:ignore="TextContrastCheck" />

    <ToggleButton
        android:id="@+id/idToggleCreamer"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:textOff="@string/teaCreamOff"
        android:textOn="@string/teaCream"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup"
        app:layout_constraintTop_toBottomOf="@+id/idToggleSugar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/scr2Name"
        app:layout_constraintEnd_toStartOf="@+id/idPrintName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/scr2Phone"
        app:layout_constraintEnd_toStartOf="@+id/idPrintPhone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>