<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="101dp"
        android:layout_height="64dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/cust_name_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/idCustName"
        android:layout_width="180dp"
        android:layout_height="51dp"
        android:layout_marginTop="28dp"
        android:gravity="center_vertical"
        android:hint="@string/cust_name_hint"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.223"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/idButtonToScr2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/toScreen2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="99dp"
        android:layout_height="62dp"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/phone_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <EditText
        android:id="@+id/idCustPhone"
        android:layout_width="180dp"
        android:layout_height="51dp"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:hint="@string/cust_phone_hint"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.246"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/idCustName"
        tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="174dp"
        android:layout_height="125dp"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tea" />
</androidx.constraintlayout.widget.ConstraintLayout>